adaptive layout: long file names width fix on smallscreen

--- a/web/documentserver-example/csharp/App_Themes/media.css
+++ b/web/documentserver-example/csharp/App_Themes/media.css
@@ -570,3 +570,8 @@
         width: 50%;
     }
 }
+@media (max-width: 510px) {
+    .tableRow td:first-child{
+        flex-grow: 0;
+    }
+}
